--- a/PiggyPatchwork/PhotoMovie.storyboard
+++ b/PiggyPatchwork/PhotoMovie.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O0o-0k-QGJ">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -41,7 +40,7 @@
                                     <color key="titleColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Rw4-0u-qCx" kind="show" id="F9d-Vy-aIK"/>
+                                    <action selector="nextStep:" destination="O0o-0k-QGJ" eventType="touchUpInside" id="muF-Zm-jis"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V95-T0-HSu">
@@ -80,7 +79,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="點一下按鈕                               選取欲製成影片的照片哦！" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpD-tm-znX">
-                                <rect key="frame" x="99.666666666666686" y="645.66666666666663" width="207" height="90.333333333333371"/>
+                                <rect key="frame" x="99.666666666666686" y="627.66666666666663" width="207" height="108.33333333333337"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -103,7 +102,7 @@
                             <constraint firstItem="cpD-tm-znX" firstAttribute="centerX" secondItem="WRd-Db-W2R" secondAttribute="centerX" constant="-4" id="cNz-lN-XXm"/>
                             <constraint firstItem="WRd-Db-W2R" firstAttribute="trailing" secondItem="HJi-eG-0eB" secondAttribute="trailing" constant="16" id="hs4-rb-mgB"/>
                             <constraint firstItem="HJi-eG-0eB" firstAttribute="centerY" secondItem="mOy-tD-sid" secondAttribute="centerY" id="ivw-hQ-Wzj"/>
-                            <constraint firstItem="cpD-tm-znX" firstAttribute="height" secondItem="BAq-3N-SGY" secondAttribute="height" multiplier="1:4" id="kaw-ZN-Lje"/>
+                            <constraint firstItem="cpD-tm-znX" firstAttribute="height" secondItem="BAq-3N-SGY" secondAttribute="height" multiplier="1.5:5" id="kaw-ZN-Lje"/>
                             <constraint firstItem="mOy-tD-sid" firstAttribute="top" secondItem="WRd-Db-W2R" secondAttribute="top" constant="8" id="la8-rl-Ydv"/>
                             <constraint firstItem="V95-T0-HSu" firstAttribute="height" secondItem="EXP-SL-jDg" secondAttribute="height" multiplier="80/896" id="nIZ-cG-t5Z"/>
                             <constraint firstItem="BAq-3N-SGY" firstAttribute="width" secondItem="WRd-Db-W2R" secondAttribute="width" id="pKT-uo-hib"/>
@@ -131,37 +130,47 @@
         <!--Movie Preview View Controller-->
         <scene sceneID="Iri-Tl-fY9">
             <objects>
-                <viewController id="Rw4-0u-qCx" customClass="MoviePreviewViewController" customModule="PiggyPatchwork" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="moviePreview" id="Rw4-0u-qCx" customClass="MoviePreviewViewController" customModule="PiggyPatchwork" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iza-7c-Fuh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8he-oD-2ih">
-                                <rect key="frame" x="20" y="100" width="374" height="304"/>
-                                <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2Y-Nf-QBp">
-                                <rect key="frame" x="0.0" y="726" width="414" height="100"/>
-                                <color key="backgroundColor" red="0.23137254900000001" green="0.34901960780000002" blue="0.59607843140000005" alpha="1" colorSpace="calibratedRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="film" translatesAutoresizingMaskIntoConstraints="NO" id="KUQ-ts-IbI">
+                                <rect key="frame" x="0.0" y="145" width="414" height="357"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="nKd-U4-JSj"/>
+                                    <constraint firstAttribute="width" secondItem="KUQ-ts-IbI" secondAttribute="height" multiplier="138:119" id="8dA-Ba-OKh"/>
                                 </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="儲存影片"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FaZ-Bm-RwY">
+                                <rect key="frame" x="16" y="52" width="93" height="22"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="1" green="0.81568627450980391" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                                <state key="normal" title="  上一步" image="next_icon_left">
+                                    <color key="titleColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
-                                    <action selector="saveMovie:" destination="Rw4-0u-qCx" eventType="touchUpInside" id="s8r-cc-oR4"/>
+                                    <action selector="backToPhotoMovie:" destination="Rw4-0u-qCx" eventType="touchUpInside" id="ktb-fa-SDY"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8he-oD-2ih">
+                                <rect key="frame" x="32" y="170.66666666666663" width="350" height="306"/>
+                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="8he-oD-2ih" secondAttribute="height" multiplier="175:153" id="pIB-9z-9iD"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="bottom" secondItem="8he-oD-2ih" secondAttribute="bottom" multiplier="2:1" id="8c2-g6-FYW"/>
-                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="D2Y-Nf-QBp" secondAttribute="trailing" id="Q0P-zv-w7q"/>
-                            <constraint firstItem="D2Y-Nf-QBp" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" id="Y07-yc-keZ"/>
-                            <constraint firstAttribute="bottom" secondItem="D2Y-Nf-QBp" secondAttribute="bottom" constant="16" id="jz4-XG-Lds"/>
-                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="8he-oD-2ih" secondAttribute="trailing" constant="20" id="sCs-zy-g9S"/>
-                            <constraint firstItem="8he-oD-2ih" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="20" id="sLi-lf-auc"/>
-                            <constraint firstItem="8he-oD-2ih" firstAttribute="top" secondItem="Njh-k4-5HJ" secondAttribute="top" constant="100" id="xyp-Fs-0C7"/>
+                            <constraint firstItem="FaZ-Bm-RwY" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="16" id="2OS-r1-jv0"/>
+                            <constraint firstItem="8he-oD-2ih" firstAttribute="centerX" secondItem="KUQ-ts-IbI" secondAttribute="centerX" id="3jr-2O-WX5"/>
+                            <constraint firstItem="8he-oD-2ih" firstAttribute="height" secondItem="KUQ-ts-IbI" secondAttribute="height" multiplier="306:357" id="8T5-ze-IN4"/>
+                            <constraint firstItem="FaZ-Bm-RwY" firstAttribute="top" secondItem="Njh-k4-5HJ" secondAttribute="top" constant="8" id="MrX-Cv-l6G"/>
+                            <constraint firstItem="8he-oD-2ih" firstAttribute="centerY" secondItem="KUQ-ts-IbI" secondAttribute="centerY" id="MzX-4R-FPY"/>
+                            <constraint firstItem="KUQ-ts-IbI" firstAttribute="centerX" secondItem="Njh-k4-5HJ" secondAttribute="centerX" id="NsE-DM-5Pr"/>
+                            <constraint firstItem="KUQ-ts-IbI" firstAttribute="width" secondItem="Njh-k4-5HJ" secondAttribute="width" id="OFR-YV-jiV"/>
+                            <constraint firstItem="KUQ-ts-IbI" firstAttribute="centerY" secondItem="Njh-k4-5HJ" secondAttribute="centerY" multiplier="5:7" id="nij-Sn-S8d"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Njh-k4-5HJ"/>
                     </view>
@@ -171,10 +180,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ecc-1n-v1U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="765" y="185"/>
+            <point key="canvasLocation" x="702.89855072463774" y="184.82142857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="film" width="414" height="306"/>
         <image name="next_icon_left" width="8" height="12"/>
         <image name="next_icon_right" width="8" height="12"/>
         <image name="piggy_studio" width="414" height="361"/>
