--- a/PiggyPatchwork/PhotoMovie.storyboard
+++ b/PiggyPatchwork/PhotoMovie.storyboard
@@ -136,7 +136,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="film" translatesAutoresizingMaskIntoConstraints="NO" id="KUQ-ts-IbI">
-                                <rect key="frame" x="0.0" y="145" width="414" height="357"/>
+                                <rect key="frame" x="0.0" y="123.66666666666669" width="414" height="357"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="KUQ-ts-IbI" secondAttribute="height" multiplier="138:119" id="8dA-Ba-OKh"/>
                                 </constraints>
@@ -154,33 +154,81 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8he-oD-2ih">
-                                <rect key="frame" x="32" y="170.66666666666663" width="350" height="306"/>
-                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="32" y="149" width="350" height="306"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8he-oD-2ih" secondAttribute="height" multiplier="175:153" id="pIB-9z-9iD"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0cX-Wo-aaT">
+                                <rect key="frame" x="75" y="557.33333333333337" width="264" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Ecs-Mf-aug"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="noS-IG-kx2">
+                                <rect key="frame" x="75" y="709.66666666666663" width="264" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="9p3-ic-TxD"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4dy-kS-FWE">
+                                <rect key="frame" x="75" y="455" width="264" height="102.33333333333337"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lpF-EB-uL9">
+                                <rect key="frame" x="75" y="607.33333333333337" width="264" height="102.33333333333337"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="va7-GL-iRY">
+                                <rect key="frame" x="75" y="759.66666666666663" width="264" height="102.33333333333337"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="FaZ-Bm-RwY" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="16" id="2OS-r1-jv0"/>
+                            <constraint firstItem="lpF-EB-uL9" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="75" id="2Vw-hW-pG0"/>
+                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="0cX-Wo-aaT" secondAttribute="trailing" constant="75" id="33z-bO-rkW"/>
                             <constraint firstItem="8he-oD-2ih" firstAttribute="centerX" secondItem="KUQ-ts-IbI" secondAttribute="centerX" id="3jr-2O-WX5"/>
                             <constraint firstItem="8he-oD-2ih" firstAttribute="height" secondItem="KUQ-ts-IbI" secondAttribute="height" multiplier="306:357" id="8T5-ze-IN4"/>
+                            <constraint firstItem="4dy-kS-FWE" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="75" id="G6e-nu-yZL"/>
+                            <constraint firstItem="noS-IG-kx2" firstAttribute="top" secondItem="lpF-EB-uL9" secondAttribute="bottom" id="J7b-oB-qy4"/>
+                            <constraint firstItem="lpF-EB-uL9" firstAttribute="top" secondItem="0cX-Wo-aaT" secondAttribute="bottom" id="KsV-7t-BHG"/>
                             <constraint firstItem="FaZ-Bm-RwY" firstAttribute="top" secondItem="Njh-k4-5HJ" secondAttribute="top" constant="8" id="MrX-Cv-l6G"/>
                             <constraint firstItem="8he-oD-2ih" firstAttribute="centerY" secondItem="KUQ-ts-IbI" secondAttribute="centerY" id="MzX-4R-FPY"/>
                             <constraint firstItem="KUQ-ts-IbI" firstAttribute="centerX" secondItem="Njh-k4-5HJ" secondAttribute="centerX" id="NsE-DM-5Pr"/>
                             <constraint firstItem="KUQ-ts-IbI" firstAttribute="width" secondItem="Njh-k4-5HJ" secondAttribute="width" id="OFR-YV-jiV"/>
-                            <constraint firstItem="KUQ-ts-IbI" firstAttribute="centerY" secondItem="Njh-k4-5HJ" secondAttribute="centerY" multiplier="5:7" id="nij-Sn-S8d"/>
+                            <constraint firstItem="4dy-kS-FWE" firstAttribute="centerX" secondItem="Njh-k4-5HJ" secondAttribute="centerX" id="QCg-dQ-ovf"/>
+                            <constraint firstItem="va7-GL-iRY" firstAttribute="top" secondItem="noS-IG-kx2" secondAttribute="bottom" id="aHz-H1-Sa2"/>
+                            <constraint firstItem="va7-GL-iRY" firstAttribute="height" secondItem="4dy-kS-FWE" secondAttribute="height" id="avz-XF-aif"/>
+                            <constraint firstItem="4dy-kS-FWE" firstAttribute="height" secondItem="lpF-EB-uL9" secondAttribute="height" id="cH6-mg-tJ2"/>
+                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="lpF-EB-uL9" secondAttribute="trailing" constant="75" id="iJW-Gt-sXM"/>
+                            <constraint firstItem="va7-GL-iRY" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="75" id="iNe-zc-8xI"/>
+                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="noS-IG-kx2" secondAttribute="trailing" constant="75" id="j5I-cY-Ii4"/>
+                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="4dy-kS-FWE" secondAttribute="trailing" constant="75" id="jTV-Mg-LwZ"/>
+                            <constraint firstItem="noS-IG-kx2" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="75" id="k7e-BA-lj4"/>
+                            <constraint firstItem="0cX-Wo-aaT" firstAttribute="top" secondItem="4dy-kS-FWE" secondAttribute="bottom" id="mRP-7L-Hvr"/>
+                            <constraint firstItem="KUQ-ts-IbI" firstAttribute="centerY" secondItem="Njh-k4-5HJ" secondAttribute="centerY" multiplier="6:9" id="nij-Sn-S8d"/>
+                            <constraint firstItem="4dy-kS-FWE" firstAttribute="top" secondItem="8he-oD-2ih" secondAttribute="bottom" id="o1T-rw-i6g"/>
+                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="va7-GL-iRY" secondAttribute="trailing" constant="75" id="suo-tQ-6IK"/>
+                            <constraint firstItem="0cX-Wo-aaT" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="75" id="vbM-PZ-V42"/>
+                            <constraint firstItem="va7-GL-iRY" firstAttribute="bottom" secondItem="Njh-k4-5HJ" secondAttribute="bottom" id="yDi-p0-ama"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Njh-k4-5HJ"/>
                     </view>
                     <connections>
+                        <outlet property="backToPhotoMovieBtn" destination="FaZ-Bm-RwY" id="IQh-bG-eU9"/>
                         <outlet property="movieView" destination="8he-oD-2ih" id="Hqh-hf-4Wf"/>
+                        <outlet property="saveMovieView" destination="0cX-Wo-aaT" id="W69-0X-UPC"/>
+                        <outlet property="shareToPlatformView" destination="noS-IG-kx2" id="JqU-Hh-R94"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ecc-1n-v1U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="702.89855072463774" y="184.82142857142856"/>
+            <point key="canvasLocation" x="660.86956521739137" y="184.82142857142856"/>
         </scene>
     </scenes>
     <resources>
