--- a/PiggyPatchwork/Base.lproj/Collage.storyboard
+++ b/PiggyPatchwork/Base.lproj/Collage.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -177,7 +176,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ehO-aB-eB5">
-                                        <rect key="frame" x="65" y="8.5" width="169" height="33"/>
+                                        <rect key="frame" x="65" y="0.0" width="169" height="50"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
                                                 <fragment content="藝術塗鴉">
@@ -199,6 +198,7 @@
                                     <constraint firstAttribute="height" constant="50" id="077-Kx-bY9"/>
                                     <constraint firstItem="ehO-aB-eB5" firstAttribute="centerY" secondItem="gkr-g7-21j" secondAttribute="centerY" id="EKN-EO-Wds"/>
                                     <constraint firstItem="ehO-aB-eB5" firstAttribute="leading" secondItem="frw-va-Hvh" secondAttribute="trailing" constant="15" id="SXL-6F-afl"/>
+                                    <constraint firstItem="ehO-aB-eB5" firstAttribute="top" secondItem="gkr-g7-21j" secondAttribute="top" id="VNp-Ka-X8n"/>
                                     <constraint firstItem="frw-va-Hvh" firstAttribute="centerY" secondItem="gkr-g7-21j" secondAttribute="centerY" id="YLn-8X-k2k"/>
                                     <constraint firstItem="frw-va-Hvh" firstAttribute="leading" secondItem="gkr-g7-21j" secondAttribute="leading" constant="30" id="uWo-tB-E44"/>
                                     <constraint firstAttribute="trailing" secondItem="ehO-aB-eB5" secondAttribute="trailing" constant="30" id="ugY-M4-j7y"/>
@@ -208,7 +208,7 @@
                                 <rect key="frame" x="75" y="639.5" width="264" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Ov-R4-93W">
-                                        <rect key="frame" x="63" y="8.5" width="171" height="33"/>
+                                        <rect key="frame" x="63" y="0.0" width="171" height="50"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
                                                 <fragment content="儲存到相簿">
@@ -239,6 +239,7 @@
                                     <constraint firstAttribute="height" constant="50" id="VwO-aE-XuI"/>
                                     <constraint firstItem="7Ov-R4-93W" firstAttribute="leading" secondItem="Hga-Ot-P3u" secondAttribute="trailing" constant="15" id="ffI-NL-ufV"/>
                                     <constraint firstAttribute="trailing" secondItem="7Ov-R4-93W" secondAttribute="trailing" constant="30" id="nDu-xc-EJr"/>
+                                    <constraint firstItem="7Ov-R4-93W" firstAttribute="top" secondItem="2aY-4V-r13" secondAttribute="top" id="pae-yh-uEo"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rXH-76-84t">
@@ -261,7 +262,7 @@
                                 <rect key="frame" x="75" y="724" width="264" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h68-7n-Yie">
-                                        <rect key="frame" x="63" y="8.5" width="171" height="33"/>
+                                        <rect key="frame" x="63" y="0.0" width="171" height="50"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
                                                 <fragment content="分享至社群">
@@ -287,6 +288,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="h68-7n-Yie" firstAttribute="top" secondItem="oS5-Dl-7HX" secondAttribute="top" id="6b3-eA-4Vo"/>
                                     <constraint firstItem="h68-7n-Yie" firstAttribute="leading" secondItem="Mhg-SE-WXd" secondAttribute="trailing" constant="15" id="EPy-fR-uFy"/>
                                     <constraint firstItem="h68-7n-Yie" firstAttribute="centerY" secondItem="oS5-Dl-7HX" secondAttribute="centerY" id="GC2-ha-7bP"/>
                                     <constraint firstItem="Mhg-SE-WXd" firstAttribute="leading" secondItem="oS5-Dl-7HX" secondAttribute="leading" constant="30" id="Xi7-3c-nKW"/>
